--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
     build: ./docker/php
     volumes:
       - ./src:/var/www/
+    user: "${UID}:${GID}"  # 👈 これを追加
 
   mysql:
     image: mysql:8.0.26
